--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
             Moi Shadrach | FullStack Developer
         </h1>
     </div>
+    <div class="container">
+        <div class="box">image</div>
+        <div class="box">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, possimus.</p>
+        </div>
+    </div>
 </body>
 </html>
