add images file content

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         </h1>
     </div>
     <div class="container">
-        <div class="box">image</div>
+        <div class="box">
+            
+        </div>
         <div class="box">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, possimus.</p>
         </div>
