--- a/index.html
+++ b/index.html
@@ -5,19 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio page</title>
-</head>
+     <link href="stylesheet" rel="style.css">
+    <!-- CSS only -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  </head>
 <body>
     <div class="header">
         <h1>
-            Moi Shadrach | FullStack Developer
+            Moi Shadrach | <span>FullStack</span> Developer
         </h1>
     </div>
     <div class="container">
         <div class="box">
-            
+
         </div>
         <div class="box">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, possimus.</p>
+        </div>
+    </div>
+    <div class="jumbotron">
+        <h2>About <span>Me</span></h2>
+    </div>
+    <div class="container-fluid">
+        <div class="card">
+            <h2>Background Information</h2>
+        </div>
+        <div class="card">
+            <h2>Job Experience</h2>
+        </div>
+        <div class="card">
+            <h2>Hobbies, Skills $ Interests</h2>
         </div>
     </div>
 </body>
