add modified files

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="container">
         <div class="box">
-
+        <img src="images/me.jpg">
         </div>
         <div class="box">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, possimus.</p>
