add modified files

--- a/index.html
+++ b/index.html
@@ -29,13 +29,17 @@
     <div class="container-fluid">
         <div class="card">
             <h2>Background Information</h2>
+            <p>After I finished High School I attended college doing Computer Studies Diploma</p>
         </div>
         <div class="card">
             <h2>Job Experience</h2>
+            <p>My job experience is less than a year doing freelancing in Adobe Photoshop for local cyber Cafe</p>
         </div>
         <div class="card">
             <h2>Hobbies, Skills $ Interests</h2>
-            
+            <p>My <strong>Hobbies</strong> are playing games example Need For Speed</p>
+            <p>My <strong>skills</strong> are not beyond Adobe Photoshop</p>
+            <p>My <strong>Interests</strong> are coding, networking and management</p>
         </div>
     </div>
 </body>
