--- a/index.html
+++ b/index.html
@@ -42,5 +42,16 @@
             <p>My <strong>Interests</strong> are coding, networking and management</p>
         </div>
     </div>
+    <div class="container">
+        <h1>Contact Me</h1>
+        <div class="card">
+
+        </div>
+        <div class="card">
+            <div class="form">
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
