add modified html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     <div class="container">
         <h1>Contact Me</h1>
         <div class="card">
-
+        <h3>Phone: 0743235319</h3>
+        <h3>Location: Moringa, Ngong Lane Plaza</h3>
         </div>
         <div class="card">
             <div class="form">
