add form details

--- a/index.html
+++ b/index.html
@@ -42,15 +42,29 @@
             <p>My <strong>Interests</strong> are coding, networking and management</p>
         </div>
     </div>
-    <div class="container">
-        <h1>Contact Me</h1>
-        <div class="card">
-        <h3>Phone: 0743235319</h3>
-        <h3>Location: Moringa, Ngong Lane Plaza</h3>
-        </div>
-        <div class="card">
+    <div class="container1">
+        
+        <div class="contact-info">
+            <h1>Contact Me</h1>
+            <i class="material-icons">Place</i>
+            <span>Moringa, Ngong Lane plaza, Nairobi</span>
+            <i class="material-icons">Place</i>
+            <span>Moringa, Ngong Lane plaza, Nairobi</span>
             <div class="form">
-
+             <span class="inputbox">
+                 <input type="text" required>
+                 <span class="inputname"> Full Name</span><br>
+             </span>
+             <span class="inputbox">
+                <input type="text" required>
+                <span class="Email">Email</span><br>
+            </span>
+            <span class="inputbox">  
+                 <textarea name="" id="" cols="30" rows="3" required></textarea>
+                <span class="textname">Write your message here</span>
+            </span> <br>
+            
+            <input type="submit">
             </div>
         </div>
     </div>
