--- a/index.html
+++ b/index.html
@@ -25,12 +25,28 @@
         </h1>
     </div>
     <div class="container">
-       <center><h1>About Me</h1>  </center> 
+       <center><h1>About <span>Me</span></h1>  </center> 
         <div class="box">
         <img src="images/me.jpg">
         </div>
         <div class="box">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, possimus.</p>
+        </div>
+    </div>
+    <div class="boxe">
+        <div class="card">
+            <h2><em>Background Information</em></h2>
+            <p>After I finished High School I attended college doing Computer Studies Diploma</p>
+        </div>
+        <div class="card">
+            <h2><em>Job Experience</em></h2>
+            <p>My job experience is less than a year doing freelancing in Adobe Photoshop for local cyber Cafe</p>
+        </div>
+        <div class="card">
+            <h2><em>Hobbies, Skills $ Interests</em></h2>
+            <p>My <strong>Hobbies</strong> are playing games example Need For Speed</p>
+            <p>My <strong>skills</strong> are not beyond Adobe Photoshop</p>
+            <p>My <strong>Interests</strong> are coding, networking and management</p>
         </div>
     </div>
     <!-- end of About -->
@@ -56,34 +72,22 @@
       <center><h1>Service</h1></center> 
        <div class="boxx">
            <div class="card">
-            <h7>Front-end Development</h7>
+            <h7><em>Front-end Development</em></h7>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, culpa!</p>
            </div>
            <div class="card">
-            <h7>UI Design</h7>
+            <h7><em>UI Design</em></h7>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, totam!</p>
             </div>
             <div class="card">
-                <h7>Backend Development</h7>
+                <h7><em>Backend Development</em></h7>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, tempore.</p>
             </div>
        </div>
    </div>
-    <div class="boxe">
-        <div class="card">
-            <h2>Background Information</h2>
-            <p>After I finished High School I attended college doing Computer Studies Diploma</p>
-        </div>
-        <div class="card">
-            <h2>Job Experience</h2>
-            <p>My job experience is less than a year doing freelancing in Adobe Photoshop for local cyber Cafe</p>
-        </div>
-        <div class="card">
-            <h2>Hobbies, Skills $ Interests</h2>
-            <p>My <strong>Hobbies</strong> are playing games example Need For Speed</p>
-            <p>My <strong>skills</strong> are not beyond Adobe Photoshop</p>
-            <p>My <strong>Interests</strong> are coding, networking and management</p>
-        </div>
-    </div>
+    
     <!-- start of contact -->
-    <center><h1>Contact Me</h1></center>
+    <center><h1>Contact <span>Me</span></h1></center>
         <div class="container-fluid">
                   
               <div class="form">
