--- a/index.html
+++ b/index.html
@@ -21,17 +21,19 @@
             </ul>
         </div>
         <h1>
-            Moi Shadrach | <span>FullStack</span> Developer
+            Moi Shadrach | <span>FullStack Developer</span>
         </h1>
     </div>
-    <div class="container">
-       <center><h1>About <span>Me</span></h1>  </center> 
+    <div class="container-fluid1">
+       <center><h1>About <span>Me</span></h1>  </center>
+       <div class="mycontainer"> 
         <div class="box">
         <img src="images/me.jpg">
         </div>
         <div class="box">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, possimus.</p>
         </div>
+    </div>
     </div>
     <div class="boxe">
         <div class="card">
