--- a/index.html
+++ b/index.html
@@ -55,16 +55,34 @@
     <!-- start of portfolio -->
     <div class="port">
         <center><h1>Portfolio</h1></center>
-        <h6>
-             Portfolio I have worked on so far
-        </h6>
-        <div class="card">
+        <center>
+            <h6>
+            Portfolio I have worked on so far
+       </h6></center>
+        
+        <div class="portlist">
             <ul>
                 <li>pets</li>
                 <li>Letuce_Eat</li>
                 <li>IP1</li>
                 <li>OkoleaFam</li>
             </ul>
+        </div>
+        <div class="card">
+            <h4>pets</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, repudiandae.</p>
+        </div>
+        <div class="card">
+            <h4>Letuce_Eat</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, vero.</p>
+        </div>
+        <div class="card">
+            <h4>IP1</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, quia!</p>
+        </div>
+        <div class="card">
+            <h4>OkoleaFam</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, reiciendis?</p>
         </div>
     </div>
     <!-- end of portfolio -->
@@ -75,15 +93,15 @@
        <div class="boxx">
            <div class="card">
             <h7><em>Front-end Development</em></h7>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, culpa!</p>
+            <p>By using HTML, CSS, Bootstrap and Javascript i can design the front-end of a website for the user to interact with it with ease.</p>
            </div>
            <div class="card">
             <h7><em>UI Design</em></h7>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, totam!</p>
+            <p>By using both Figma online resource and miro i can design a prototype of the user interface for the customer to see what the end product would look like after development.</p>
             </div>
             <div class="card">
                 <h7><em>Backend Development</em></h7>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, tempore.</p>
+                <p>Using Javascript and Angularjs i can develop the backend of a Website to store the user's data and edit or delete where necessary.</p>
             </div>
        </div>
    </div>
