--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio page</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+   
      
   </head>
   <!-- start of about -->
@@ -109,7 +109,16 @@
     <!-- start of contact -->
     <center><h1>Contact <span>Me</span></h1></center>
         <div class="container-fluid">
-                  
+                  <div class="contact">
+                      <div class="email">
+                        <img src="images/icons8-email-64.png">
+                        <a><h6>moishadrack@gmail.com</h6></a>
+                      </div>
+                      <div class="loc">
+                          <img src="images/icons8-location-50.png">
+                          <h6>Moringa school, Ngong Plaza.</h6>
+                      </div>
+                  </div>
               <div class="form">
                 <h7>Message Me</h7>
                 <div id="error"></div>
