--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio page</title>
     <link rel="stylesheet" href="style.css">
-   
+    <link  rel="/bootstrap-5.1.3-dist/bootsrap-5/css" href="CSS"> 
      
   </head>
   <!-- start of about -->
