--- a/index.html
+++ b/index.html
@@ -25,17 +25,19 @@
         </h1>
     </div>
     <div class="container-fluid1">
-       <center><h1>About <span>Me</span></h1>  </center>
+       <center><h1><span>About Me</span></h1>  </center>
        <div class="mycontainer"> 
         <div class="box">
         <img src="images/me.jpg">
         </div>
         <div class="box">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, possimus.</p>
+            <p>Hello? Am Moi Shadrack a Fullstack Developer at Moringa School the best <br>coding bootcamp in East and Central Africa.<br><br></p>
+            <p>I got interested to Software development and coding after I played Need <br>For Speed Black Edition- A computer gmae developed in 2005<br><br></p>
+            <p>I then decided to look for a coding school then a landed at Moringa School.</p>
         </div>
-    </div>
-    </div>
-    <div class="boxe">
+     </div>
+     </div>
+       <div class="boxe">
         <div class="card">
             <h2><em>Background Information</em></h2>
             <p>After I finished High School I attended college doing Computer Studies Diploma</p>
@@ -57,8 +59,8 @@
         <center><h1><span>My </span>Portfolio</h1></center>
         <center>
             <h6>
-            Portfolio I have worked on so far
-       </h6></center>
+              Portfolio I have worked on so far are as listed below. 
+            </h6></center>
         
         <div class="portlist">
             <ul>
