--- a/index.html
+++ b/index.html
@@ -72,19 +72,24 @@
         </div>
         <div class="card">
             <h4>pets</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, repudiandae.</p>
+            <p>This is a website that allow the users to view variety of pets available for sale and even the type of breed. We collaborated with Michael Mapesa. The Languages we used are HTML, CSS </p>
+            <a href="https://12moi.github.io/pets/"></a>
         </div>
         <div class="card">
             <h4>Letuce_Eat</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, vero.</p>
+            <p>This is a website that a allow the users to check on the variety of meals available and make an order of the meal they will wish to buy.</p>
+            <a href="https://12moi.github.io/Letuce_Eat/"></a>
         </div>
         <div class="card">
             <h4>IP1</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, quia!</p>
+            <p>IP1 is a burger website that the visitors to the website check on the burger available and make order on the website.</p>
+            <a href="https://12moi.github.io/IP1/"></a>
         </div>
         <div class="card">
             <h4>OkoleaFam</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, reiciendis?</p>
+            <p>OkoleaFam is a Events Website where the visitors may join the upcomming event and can also make donation to Children's Homes and Unfortunate Families.
+                 We collaborated  with Lyons Masawa, Catherene Wangari and Daniel Muthama </p>
+            <a href="https://12moi.github.io/OkoleaFam/"></a>
         </div>
     </div>
     <!-- end of portfolio -->
