--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="header">
         <div class="navlist">
             <ul>
-                <li>About Me</li>
-                <li>Portfolio</li>
-                <li>Services</li>
-                <li>Contacts</li>
+                <ol>About Me</ol>
+                <ol>Portfolio</ol>
+                <ol>Services</ol>
+                <ol>Contacts</ol>
             </ul>
         </div>
         <h1>
